--- a/style.css
+++ b/style.css
@@ -85,9 +85,33 @@ main {
 .shareLinkBlock {
     height: 50px;
     display: flex;
+    align-items: center;
     margin-top: 70px;
 }
 
 .shareLinkBlock * {
     margin-right: 30px;
+    width: 20px;
+    
+}
+
+.respNav {
+    width: 34px;
+    height: 34px;
+    background-repeat: no-repeat;
+    background-image: url(./img/burg.png);
+    background-position-y: center;
+    cursor: pointer;
+    position: relative;
+}
+.blockClass {
+    height: 1px;
+    width: 1px;
+    margin-left: -170px;
+    margin-top: 30px;
+    text-align: right;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
