--- a/fonts.css
+++ b/fonts.css
@@ -43,3 +43,12 @@ h1 {
     font-size: 18px;
     line-height: 28px;
 }
+/* 
+.pButtons {
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17.5475px;
+    line-height: 26px;
+    color: var(--white);
+} */
