--- a/buttons.css
+++ b/buttons.css
@@ -1,4 +1,3 @@
-
 .button {
     font-family: Fira Sans;
     width: 160px;
@@ -15,8 +14,8 @@
     cursor: pointer;
     overflow: hidden;
  }
-.button::before,
-.button::after {
+
+.button::before, .button::after {
    content: '';
    position: absolute;
    left:0;
@@ -29,22 +28,27 @@
    transform: translate3D(0,-101%,0);
    transition: all .5s;
 }
+
 .button::before {
    background: var(--deepBlue);
    z-index: -2;
    transform: translate3D(0,0,0);
 }
+
 .button:hover {
    color:white;
 }
+
 .button:hover::after {
    transform: translate3D(0,0,0);
 }
+
 .slideleft::after {
     top:0;
     z-index:-1;
     transform: translate3D(-101%,0,0);
  }
+ 
  .slideleft:hover:after {
     transform: translate3D(0,0,0);
  }
